2009-04-11 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* db/init-db.mysql: retrieve the last_updated field from the DB.
	* App_Code/NodeUtils.cs: get master_id and last_updated.
	* status.aspx: last updated time comes from the DB. Remove everything
	after a '<' for generic type names when creating the link to MSDN.

2009-04-11 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* App_Code/NodeUtils.cs: new GetNodeByName overloads.
	* status.aspx: get all the parent nodes for the one we're populating
	so that creating the links to MSDN work.

2009-04-10 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* index.aspx:
	* main.css:
	* status.aspx: make this work in IE7.

2009-04-09 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* db/init-db.mysql: more stuff to filter out.
	* db/webcompare-db.cs: added a parameter to support updating only
	the specified assemblies.

2009-04-08 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* App_Code/NodeUtils.cs: prevent nullref in weird cases when 
	'name' is null (seen in System.ServiceModel 3.5 2.0).

2009-04-07 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* INSTALL: added deployment instructions.
	* main.css: fix the logo url.
	* Makefile: use a variable for the files in the base folder that are
	pushed to the server.

2009-04-06 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Web.config: Removed file.
	* Makefile: don't push web.config to the server
	* App_Code/NodeUtils.cs: get the connection string from web.config.
	* Web.config-EDITME: added <appSettings> with placeholder for the
	connection string.

2009-04-06 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* db/webcompare-db.exe.config-EDITME:
	* db/webcompare-db.cs: read the connection string from the config
	file.
	* db/Makefile:
	* Makefile: do not push the local configuration file.

2009-04-06 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* main.css:
	* Makefile:
	* index.aspx:
	* db: New directory.
	* db/web.config: blocks access to this directory.