@@ -1,3 +1,10 @@
+2009-04-12 Gonzalo Paniagua Javier <gonzalo@novell.com>
+
+	* main.css:
+	* App_Code/NodeUtils.cs:
+	* status.aspx: display the the total counts of everything we compare
+	for a given assembly.
+
 2009-04-11 Gonzalo Paniagua Javier <gonzalo@novell.com>
 
 	* db/init-db.mysql: retrieve the last_updated field from the DB.
